# ddnsd

./: Cargo.toml  Dockerfile
.github/workflows/: build-docker.yml
src/: checkip.rs  main.rs
src/provider/: cloudflare.rs  digitaloceon.rs  mod.rs
