[package]
name = "ddnsd"
version = "0.1.0"
edition = "2021"

authors = ["Wonsup Yoon <wonsup@pusnow.com>"]
description = "Simple ddns daemon"
license = "MIT"
homepage = "https://github.com/Pusnow/ddnsd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", features = ["env"] }
log = "0.4"
env_logger = "0.9"
ctrlc = { version = "3.2", features = ["termination"] }
